--- a/src/templates/pages/core/debug.html
+++ b/src/templates/pages/core/debug.html
@@ -3,7 +3,7 @@
 
 {% markdown %}
 ## Visual Debugging
-Use the [option variables](docs/pages/theme/options.html) of your [theme](docs/pages/theme/_introduction.html) to include styles that are only applied if certain _debug flags_ were set. You can highlight BEM-style elements (__elements, --modifiers), certain utility classes or even display the currently active media query.
+Use the [option variables](/pages/theme/options.html) of your [theme](/pages/theme/_introduction.html) to include styles that are only applied if certain _debug flags_ were set. You can highlight BEM-style elements (__elements, --modifiers), certain utility classes or even display the currently active media query.
 
 |                |                                              |
 | -              | -                                            |
