--- a/src/templates/pages/elements/buttons.html
+++ b/src/templates/pages/elements/buttons.html
@@ -3,7 +3,7 @@
 
 {% markdown %}
 ## Buttons
-Buttons are very flexible and versatile. They come with many different styles, four different sizes and they may include one or more icons. To try out all possible combinations, use the [buttons kitchensink](docs/pages/tools/buttons_kitchensink.html).
+Buttons are very flexible and versatile. They come with many different styles, four different sizes and they may include one or more icons. To try out all possible combinations, use the [buttons kitchensink](/pages/tools/buttons_kitchensink.html).
 
 |   |   |
 | - | - |
@@ -22,7 +22,7 @@ Use `.btn` to render a `<a>`, `<button>`, `<input type="submit">` or `<span>` in
 
 {% markdown %}
 ### Icons inside Buttons
-You can use any [icon](docs/pages/elements/icons.html) inside any kind of button. You can place them left or right (= first or last in markup) or only use icons and no label text. Some examples:
+You can use any [icon](/pages/elements/icons.html) inside any kind of button. You can place them left or right (= first or last in markup) or only use icons and no label text. Some examples:
 {% endmarkdown %}
 
 <div class="documentation__blocks">
@@ -75,7 +75,7 @@ You can use **more than one icon** per button. But **this rarely makes much sens
 
 {% markdown %}
 ### `input[type="submit"]` and Other Elements As Button
-You may use any `<a>`, `<button>`, `<input type="submit">` or `<span>` as `.btn`. However, every time you want to add [icons](docs/pages/elements/icons.html), you need a wrapper element around the button label and icon. Some examples:
+You may use any `<a>`, `<button>`, `<input type="submit">` or `<span>` as `.btn`. However, every time you want to add [icons](/pages/elements/icons.html), you need a wrapper element around the button label and icon. Some examples:
 {% endmarkdown %}
 
 <div class="documentation__blocks">
@@ -221,7 +221,7 @@ It’s possible to **shorten very long button labels** by adding the modifier `.
 
 {% markdown %}
 ### Try Out Different Combinations
-Have a look at the [Buttons Kitchensink](docs/pages/tools/buttons_kitchensink.html) to try out all possible combinations.
+Have a look at the [Buttons Kitchensink](/pages/tools/buttons_kitchensink.html) to try out all possible combinations.
 {% endmarkdown %}
 
 {% endblock %}
