--- a/src/templates/pages/elements/note.html
+++ b/src/templates/pages/elements/note.html
@@ -60,7 +60,7 @@ Use the modifier `.note--large` to increase the font size.
 
 {% markdown %}
 ### Icons
-Notes can have icons that serve as visual anchors. This is useful if you wish to display critical alerts or such, where an icon amplifies the message. Use the `.note--iconXXX` modifier to insert any icon from [the Yoshino icon set](docs/pages/elements/icons.html).
+Notes can have icons that serve as visual anchors. This is useful if you wish to display critical alerts or such, where an icon amplifies the message. Use the `.note--iconXXX` modifier to insert any icon from [the Yoshino icon set](/pages/elements/icons.html).
 {% endmarkdown %}
 
 <div class="documentation__block">
