--- a/src/templates/pages/elements/tables.html
+++ b/src/templates/pages/elements/tables.html
@@ -360,7 +360,7 @@ data-table="
 
 {% markdown %}
 ### Table With Deleteable Rows
-Use the option `btnModifiers`to set the modifiers for the delete buttons. In this case we re using `large subtle`. Learn more about [`.btn`](docs/pages/elements/buttons.html) and it’s modifiers.
+Use the option `btnModifiers`to set the modifiers for the delete buttons. In this case we re using `large subtle`. Learn more about [`.btn`](/pages/elements/buttons.html) and it’s modifiers.
 {% endmarkdown %}
 
 <div class="documentation__block">
