--- a/src/templates/pages/elements/tabs.html
+++ b/src/templates/pages/elements/tabs.html
@@ -81,7 +81,7 @@ Add the modifier `.tabs__menu--large` to the `.tabs__menu`.
 
 {% markdown %}
 ### Tabs + Boxes
-Wrap tabs inside a [box element](docs/pages/elements/boxes.html) if you like.
+Wrap tabs inside a [box element](/pages/elements/boxes.html) if you like.
 {% endmarkdown %}
 
 <div class="documentation__block">
