--- a/src/templates/pages/js-interface/toggleGroup.html
+++ b/src/templates/pages/js-interface/toggleGroup.html
@@ -46,7 +46,7 @@ If you provide no event in the options JSON, the default event to trigger a togg
 
 {% markdown %}
 ### Example with click event
-This is basically the same thing like a [`.tab`](docs/pages/components/tabs.html), only you can define other events then `click` and chose any trigger element you wish. In the following example we use [`.btn`](docs/pages/components/buttons.html) and provide an *activeClassName* to mark them as active once pressed.
+This is basically the same thing like a [`.tab`](/pages/components/tabs.html), only you can define other events then `click` and chose any trigger element you wish. In the following example we use [`.btn`](/pages/components/buttons.html) and provide an *activeClassName* to mark them as active once pressed.
 {% endmarkdown %}
 
 <div class="documentation__block">
