--- a/src/templates/pages/elements/tabs.html
+++ b/src/templates/pages/elements/tabs.html
@@ -9,8 +9,8 @@ Yoshino tabs have some powerful features. You can choose from two different layo
 | -              | -                                                                                                 |
 | Less-File      | {% if basePath == '/' %}[tabs.less](assets/less/elements/tabs.less){% else %}tabs.less{% endif %} |
 | JS-File        | {% if basePath == '/' %}[tabs.js](assets/js/modules/tabs.js){% else %}tabs.js{% endif %}          |
-| Base CSS-Class | `.tabs, .tab, .tabs__menu`                                                                        |
-| Modifiers      | `.tabs__menu.large`                                                                               |
+| Base CSS-Class | `.tabs, .tabs__menu`                                                                              |
+| Modifiers      | `.tabs__menu--large, .tabs__menu--subtle, .tabs__menu--checkmarks, .tabs__menu--arrows`           |
 
 ### Example Tabs
 This is a basic example. Make sure to **add an #id to each tab** that you reference via the `.tabs__menu`.
@@ -20,15 +20,15 @@ This is a basic example. Make sure to **add an #id to each tab** that you refere
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <div class="tabs">
             <div class="tabs__menu">
-                <ul>
-                    <li class="tabs__link--active">
-                        <a href="#tab-1-1">Tab #1</a>
+                <ul class="tabs__items">
+                    <li class="tabs__item tabs__item--active">
+                        <a class="tabs__link" href="#tab-1-1">Tab #1</a>
                     </li>
-                    <li>
-                        <a href="#tab-1-2">Tab #2</a>
+                    <li class="tabs__item">
+                        <a class="tabs__link" href="#tab-1-2">Tab #2</a>
                     </li>
-                    <li>
-                        <a href="#tab-1-3">Tab #3</a>
+                    <li class="tabs__item">
+                        <a class="tabs__link" href="#tab-1-3">Tab #3</a>
                     </li>
                 </ul>
             </div>
@@ -54,15 +54,15 @@ Add the modifier `.tabs__menu--large` to the `.tabs__menu`.
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <div class="tabs">
             <div class="tabs__menu tabs__menu--large">
-                <ul>
-                    <li>
-                        <a href="#tab-2-1">Tab #1</a>
+                <ul class="tabs__items">
+                    <li class="tabs__item">
+                        <a class="tabs__link" href="#tab-2-1">Tab #1</a>
                     </li>
-                    <li class="tabs__link--active">
-                        <a href="#tab-2-2">Tab #2</a>
+                    <li class="tabs__item tabs__item--active">
+                        <a class="tabs__link" href="#tab-2-2">Tab #2</a>
                     </li>
-                    <li>
-                        <a href="#tab-2-3">Tab #3</a>
+                    <li class="tabs__item">
+                        <a class="tabs__link" href="#tab-2-3">Tab #3</a>
                     </li>
                 </ul>
             </div>
@@ -80,6 +80,38 @@ Add the modifier `.tabs__menu--large` to the `.tabs__menu`.
 </div>
 
 {% markdown %}
+### Subtle Tabs Menu
+Use the modifier `.tabs__menu--subtle` to create a clean and subtle tab menu.
+{% endmarkdown %}
+
+<div class="documentation__block">
+    <div class="documentation__example" data-printcode="language:markup; print:true;">
+        <div class="tabs__menu tabs__menu--subtle">
+            <ul class="tabs__items">
+                <li class="tabs__item">
+                    <a class="tabs__link" href="#tab-7-1">Tab #1</a>
+                </li>
+                <li class="tabs__item tabs__item--active">
+                    <a class="tabs__link" href="#tab-7-2">Tab #2</a>
+                </li>
+                <li class="tabs__item">
+                    <a class="tabs__link" href="#tab-7-3">Tab #3</a>
+                </li>
+            </ul>
+        </div>
+        <div id="tab-7-1" class="tabs__page">
+            <p>Tab #1 Content</p>
+        </div>
+        <div id="tab-7-2" class="tabs__page">
+            <p>Tab #2 Content</p>
+        </div>
+        <div id="tab-7-3" class="tabs__page">
+            <p>Tab #3 Content</p>
+        </div>
+    </div>
+</div>
+
+{% markdown %}
 ### Tabs + Boxes
 Wrap tabs inside a [box element](/pages/elements/boxes.html) if you like.
 {% endmarkdown %}
@@ -88,15 +120,15 @@ Wrap tabs inside a [box element](/pages/elements/boxes.html) if you like.
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <div class="box box--4">
             <div class="tabs__menu tabs__menu--large">
-                <ul>
-                    <li class="tabs__link--active">
-                        <a href="#tab-5-1">Tab 1</a>
+                <ul class="tabs__items">
+                    <li class="tabs__item tabs__item--active">
+                        <a class="tabs__link" href="#tab-5-1">Tab 1</a>
                     </li>
-                    <li>
-                        <a href="#tab-5-2">Tab 2</a>
+                    <li class="tabs__item">
+                        <a class="tabs__link" href="#tab-5-2">Tab 2</a>
                     </li>
-                    <li>
-                        <a href="#tab-5-3">Tab 3</a>
+                    <li class="tabs__item">
+                        <a class="tabs__link" href="#tab-5-3">Tab 3</a>
                     </li>
                 </ul>
             </div>
@@ -116,15 +148,15 @@ Add the modifier `.tabs__menu--checkmarks` to the `.tabs__menu` to display a che
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <div class="tabs">
             <div class="tabs__menu tabs__menu--checkmarks tabs__menu--large">
-                <ul>
-                    <li class="tabs__link--active">
-                        <a href="#tab-6-1">Tab 1</a>
+                <ul class="tabs__items">
+                    <li class="tabs__item tabs__item--active">
+                        <a class="tabs__link" href="#tab-6-1">Tab 1</a>
                     </li>
-                    <li>
-                        <a href="#tab-6-2">Tab 2</a>
+                    <li class="tabs__item">
+                        <a class="tabs__link" href="#tab-6-2">Tab 2</a>
                     </li>
-                    <li>
-                        <a href="#tab-6-3">Tab 3</a>
+                    <li class="tabs__item">
+                        <a class="tabs__link" href="#tab-6-3">Tab 3</a>
                     </li>
                 </ul>
             </div>
@@ -147,15 +179,15 @@ Yoshino JavaScript is modular. This means, individual scripts expose some functi
         </div>
         <div class="tabs">
             <div class="tabs__menu tabs__menu--large">
-                <ul>
-                    <li>
-                        <a href="#tab-4-1">Tab #1</a>
+                <ul class="tabs__items">
+                    <li class="tabs__item">
+                        <a class="tabs__link" href="#tab-4-1">Tab #1</a>
                     </li>
-                    <li class="tabs__link--active">
-                        <a href="#tab-4-2">Tab #2</a>
+                    <li class="tabs__item tabs__item--active">
+                        <a class="tabs__link" href="#tab-4-2">Tab #2</a>
                     </li>
-                    <li>
-                        <a href="#tab-4-3">Tab #3</a>
+                    <li class="tabs__item">
+                        <a class="tabs__link" href="#tab-4-3">Tab #3</a>
                     </li>
                 </ul>
             </div>
@@ -180,18 +212,18 @@ Add the modifier `.tabs__menu--arrows` to the `.tabs__menu` to get an alternativ
 <div class="documentation__block">
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <div class="tabs__menu tabs__menu--arrows tabs__menu--large">
-            <ul>
-                <li class="tabs__link--active">
-                    <a href="#tab-3a-1">Beschreibung</a>
+            <ul class="tabs__items">
+                <li class="tabs__item tabs__item--active">
+                    <a class="tabs__link" href="#tab-3a-1">Beschreibung</a>
                 </li>
-                <li>
-                    <a href="#tab-3a-2">Inhaltsstoffe</a>
+                <li class="tabs__item">
+                    <a class="tabs__link" href="#tab-3a-2">Inhaltsstoffe</a>
                 </li>
-                <li>
-                    <a href="#tab-3a-3">Einnahme & Dosierung</a>
+                <li class="tabs__item">
+                    <a class="tabs__link" href="#tab-3a-3">Einnahme & Dosierung</a>
                 </li>
-                <li>
-                    <a href="#tab-3a-4">Bewertungen</a>
+                <li class="tabs__item">
+                    <a class="tabs__link" href="#tab-3a-4">Bewertungen</a>
                 </li>
             </ul>
         </div>
@@ -204,27 +236,27 @@ Add the modifier `.tabs__menu--arrows` to the `.tabs__menu` to get an alternativ
 <div class="documentation__block">
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <div class="tabs__menu tabs__menu--arrows tabs__menu--large">
-            <ul>
-                <li class="tabs__link--active">
-                    <a href="#tab-3b-1">
+            <ul class="tabs__items">
+                <li class="tabs__item tabs__item--active">
+                    <a class="tabs__link" href="#tab-3b-1">
                         <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56"><g fill="#1D1D1B"><path d="M30 35.001v-10.001000000000001h-7v4h3v6.001h-3v4h10v-4z"/><circle cx="28" cy="21" r="2.5"/></g><path fill="#1D1D1B" d="M33.5 10h-19v36h27v-28l-8-8zm0 3l5 5h-5v-5zm6 31h-23v-32h15v8h8v24z"/></svg>
                         Beschreibung
                     </a>
                 </li>
-                <li>
-                    <a href="#tab-3b-2">
+                <li class="tabs__item">
+                    <a class="tabs__link" href="#tab-3b-2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56"><path fill="#1D1D1B" d="M43.5 46h-31c-.357 0-.688-.19-.866-.501-.179-.31-.178-.69.001-1l10.865-18.768v-8.731h-4c-.552 0-1-.448-1-1s.448-1 1-1h5c.552 0 1 .448 1 1v10c0 .176-.046.349-.135.501l-10.131 17.499h27.531l-10.13-17.499c-.088-.152-.135-.325-.135-.501v-10c0-.552.447-1 1-1h5c.553 0 1 .448 1 1s-.447 1-1 1h-4v8.731l10.865 18.768c.18.31.18.69.001 1-.178.311-.509.501-.866.501zM31.657 31.791s-1.76 1.201-3.658 0-3.193-.796-3.657 0l-5.947 10.209h19.211l-5.949-10.209z"/><circle fill="#1D1D1B" cx="29.5" cy="29.5" r="1.5"/><circle fill="#1D1D1B" cx="27" cy="26" r="1"/><circle fill="#1D1D1B" cx="29" cy="18" r="1"/></svg>
                         Inhaltsstoffe
                     </a>
                 </li>
-                <li>
-                    <a href="#tab-3b-3">
+                <li class="tabs__item">
+                    <a class="tabs__link" href="#tab-3b-3">
                         <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56"><path fill="#1D1D1B" d="M28.236 13.085c0-.126-.104-.227-.235-.227s-.236.101-.236.227c-1.544 8.01-10.265 14.993-10.265 23.692 0 5.799 4.701 10.5 10.5 10.5s10.5-4.701 10.5-10.5c0-8.699-8.721-15.682-10.264-23.692zm-1.236 31.807c-.552 0-1-.447-1-1s.448-1 1-1c3.859 0 7-3.141 7-7 0-.553.447-1 1-1s1 .447 1 1c0 4.962-4.037 9-9 9z"/></svg>
                         Einnahme & Dosierung
                     </a>
                 </li>
-                <li>
-                    <a href="#tab-3b-4">
+                <li class="tabs__item">
+                    <a class="tabs__link" href="#tab-3b-4">
                         <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56"><path fill="#1D1D1B" d="M28 12.715l4.131 12.714h13.369l-10.815 7.858 4.13 12.713-10.815-7.857-10.815 7.857 4.13-12.713-10.815-7.858h13.369z"/></svg>
                         Bewertungen
                     </a>
