improved text-shadows

--- a/src/assets/less/utilities/styling.less
+++ b/src/assets/less/utilities/styling.less
@@ -33,7 +33,7 @@
 // text shadows
 
 .tsh-none { text-shadow: none !important; }
-.tsh      { text-shadow: 0 1px 0 @color-main-5 !important; }
+.tsh      { text-shadow: 0 1px 0 fade(@color-main-3,50%) !important; }
 
 // text and background colors
 
